# U2.Suite.Python

./: .gitignore  README.md
Sources/U2.Suite/: BrandmeisterMonitor-win.spec  BrandmeisterMonitor.py  EmulatorMainWindow.py  FastSatEntry-win.spec  FastSatEntry.py  FastSatEntry.spec  Logger-win.spec  Logger_ContentWindow.py  Logger_MainWindow.py  Logger_QsoEditorDialog.py  Logger_StationInfoDialog.py  MainWindow.py  NewRigDialog.py  README.md  RigSelectorDialog.py  Suite_MainWindow.py  Suite_NewRigDialog.py  Suite_RigSelectorDialog.py  U2.Suite.py  U2.Suite.pyproj  Ui_MainWindow.py  Ui_RigSelect.py  app.py  point.py  pyproject.toml  testObjects.py
Sources/U2.Suite/Ini/: Elecraft K4.ini  FT-2000.ini  FT-900.ini  FTDX-5000MP.ini  IC-705-DATA.ini  IC-707.ini  IC-7100-DATA-FIL1.ini  IC-7600v2-DATA.ini  IC-7610-DATA-FIL1.ini  IC-7610-DATA.ini  IC-77.ini  IC-7850-DATA-FIL1.ini  IC-7850.ini  IC-7851-DATA-FIL1.ini  IC-7851-DATA.ini  IC-7851.ini  IC-910.ini  IC-9700.ini  JST-245n.ini
Sources/U2.Suite/brandmeister/: BmMonitorConfig.py  BmMonitorConstants.py  BmMonitorCore.py  BmMonitorDatabase.py  BmMonitorPreferences.py  BmMonitorPreferencesDialog.py  bm_monitor.py  bm_monitor_config.py  bm_monitor_constants.py  bm_monitor_core.py  bm_monitor_database.py  bm_monitor_preferences.py
Sources/U2.Suite/common/: ApplicationPreferences.py  UdpSimpleServer.py  WsjtPackets.py
Sources/U2.Suite/contracts/: AllBands.py  BitMask.py  CommandQueue.py  Entry.py  KnownIdentifiers.py  ParameterValue.py  QueueItem.py  RadioBand.py  RigCommand.py  RigCommands.py  RigParameter.py  RigSettings.py  (+1 more)
(+182 files in other folders)
