[tool.poetry]
name = "U2.Suite.Python"
version = "0.1.0"
description = "A python-based U2.Suite application"
authors = ["Sergey Usmanov, UT8UU"]
license = "Copyright 2022 Sergey Usmanov, UT8UU"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20"
h5py = "^3.6.0"
flatbuffers = "^2.0"
parameterized = "^0.8.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
black = {version = "^22.3.0", allow-prereleases = true}
cx-Freeze = "^6.10"
memory-profiler = "^0.60.0"
matplotlib = "^3.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
