[tool.poetry]
name = "U2.Suite.Python"
version = "0.1.0"
description = "A python-based U2.Suite application"
authors = ["Sergey Usmanov, UT8UU"]
license = "Copyright 2022 Sergey Usmanov, UT8UU"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.20"
parameterized = "^0.8.1"
pyqt5 = "^5.15"
pyserial = "^3.5"
pyrsistent = "^0.18.1"
serial-device2 = "^2.0.2"
semver = "^2.13.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
